--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "cloudinary": "^2.6.1",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
